# random-word-telegram-bot

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: fe43b8421968_initial_migration.py
src/: handlers.py  main.py
src/database/: db_models.py  db_requests.py
src/extra/: config.py  keyboards.py  utils.py
