[project]
name = "random-word"
version = "0.1.0"
description = "Telegram bot that sends random word every day."
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "alembic>=1.16.4",
    "apscheduler>=3.11.0",
    "emoji>=2.14.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
]
